--- a/sctnet/res/layout/footbar_layout.xml
+++ b/sctnet/res/layout/footbar_layout.xml
@@ -11,14 +11,14 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginRight="1dp"
-        android:background="#7f7f0000"
+        android:background="@drawable/job_apply"
         android:gravity="center"
         android:paddingBottom="10dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:paddingTop="10dp"
         android:text="@string/apply"
-        android:textColor="@color/lightBlack"
+        android:textColor="@color/white"
         android:textSize="15sp" />
 
     <Button
@@ -27,14 +27,14 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginRight="1dp"
-        android:background="#7f5f0000"
+        android:background="@drawable/job_apply"
         android:gravity="center"
         android:paddingBottom="10dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:paddingTop="10dp"
         android:text="@string/collect"
-        android:textColor="@color/lightBlack"
+        android:textColor="@color/white"
         android:textSize="15sp" />
 
     <Button
@@ -42,14 +42,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:background="#7fff0000"
+        android:background="@drawable/job_apply"
         android:gravity="center"
         android:paddingBottom="10dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:paddingTop="10dp"
         android:text="@string/share"
-        android:textColor="@color/lightBlack"
+        android:textColor="@color/white"
         android:textSize="15sp" />
     
 </LinearLayout>
