--- a/sctnet/res/layout/contact_way_edit_activity.xml
+++ b/sctnet/res/layout/contact_way_edit_activity.xml
@@ -93,6 +93,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
+                android:paddingRight="5dp"
+                android:textColor="@color/red"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:text="*" />
+            <TextView
+                android:id="@+id/userphone_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="1dp"
                 android:paddingRight="10dp"
                 android:textColor="@color/lightBlack"
                 android:text="本人电话" />
@@ -139,7 +149,7 @@
                 android:text="" />
         </LinearLayout>
         
-        <LinearLayout
+       <!--  <LinearLayout
             android:id="@+id/postalcode"
             android:layout_width="fill_parent"
             android:layout_height="55dp"
@@ -169,7 +179,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="" />
-        </LinearLayout>
+        </LinearLayout> -->
        <LinearLayout
             android:id="@+id/qqmsn"
             android:layout_width="fill_parent"
